# BRKGA-Modelos-de-Regressao

./: .gitignore  .gitmodules  BUILD.bazel  CEletrico20.txt  DistrProba10.txt  Fgravitacional10.txt  Fgravitacional40.txt  OndasEletro10.txt  OndasEletro20.txt  OndasEletro40.txt  POrbital10.txt  ProdutoI20.txt  WORKSPACE  bazel-Filipe-UERJ-BRKGA  bazel-bin  bazel-out  bazel-testlogs  build.sh  delgadas_10.txt  delgadas_40.txt  euclidian_10.txt  euclidian_40.txt  instances.txt  irace.Rdata  parameters.txt  play.py  py-analysis.py  relativistic_40.txt  result_example.txt  run-bazel-with-script.bat  run-bazel.bat  run-bazel.sh  run.sh  scenario.txt  script-deps.bat  script-deps.sh  second-round.cpp  target-runner.py  total-structure-report.txt  tree-gen.py  (+2 more)
.devcontainer/: Dockerfile  devcontainer.json
CMakeProject2/: CMakeLists.txt  CMakePresets.json  README.md  main  makefile  parse  run_cmake.sh  script-deps.sh  teste  todo.txt  vcpkg.json
CMakeProject2/include/brkgp/: BRKGA.hpp  Evaluator.hpp  PrintIO.hpp  ReadIO.hpp  Utils.hpp
CMakeProject2/instances/: BSRf1  BSRf2  Eq. Feynman  (1) (1).in  Eq. Feynman  (1) (2).in  Eq. Feynman  (1) (3).in  Eq. Feynman  (1) (4).in  Eq. Feynman  (1) (5).in  Eq. Feynman  (1).in  Eq. Feynman  (10) (3).in  Eq. Feynman  (2) (1).in  Eq. Feynman  (2) (2).in  Eq. Feynman  (2) (5).in  Eq. Feynman  (2) (6).in  Eq. Feynman  (2) (7).in  Eq. Feynman  (2) (8).in  Eq. Feynman  (3) (1) .in  Eq. Feynman  (3) (2) .in  Eq. Feynman  (3) (3) .in  Eq. Feynman  (3) (4) .in  Eq. Feynman  (4) (4).in  Eq. Feynman  (5) (1).in  Eq. Feynman  (5) (2).in  Eq. Feynman  (5) (3).in  Eq. Feynman  (5) (4).in  Eq. Feynman  (6) (1) .in  Eq. Feynman  (6) (2) .in  Eq. Feynman  (6) (4) .in  Eq. Feynman  (7) (3).in  Eq. Feynman  (7) (4).in  Eq. Feynman  (8) (2).in  Eq. Feynman  (8) (3).in  Eq. Feynman  (9) (1).in  Eq. Feynman  (9) (3).in  Instance_Backup.txt  Paper_BR_last_function.cpp  Set 1 - (3).in  Set 1 - (4).in  Set 1 - (5).in  Set 1 - (6).in  Set1(1).in  (+42 more)
CMakeProject2/instances_short_range/: BRlast  BSR1  Paper_BR_last_function.cpp  generate_BSR_f2.cpp  generate_india_function_short_range_1.in  generate_lit.cpp  india  lit2_func6_short_range1.in  lit2_func6_short_range3.in  lit3_BSR_func1_short_range1.in  lit3_BSR_func1_short_range3.in  paper_BR_last_fuction_short_range_3.in  sin
CMakeProject2/src/: Teste_parse.c  main.cpp  teste-vector.cpp
CMakeProject2/tests/: get_data.test.cpp
GECCO-01/: Bose-einstein_100_III.4.32_100001_01.txt  Bose-einstein_100_III.4.32_100002_02.txt  Bose-einstein_100_III.4.32_100003_03.txt  Bose-einstein_100_III.4.32_100004_04.txt  Bose-einstein_100_III.4.32_100005_05.txt  Campo_eletrico_100_I.12.4_100001_01.txt  Campo_eletrico_100_I.12.4_100002_02.txt  Campo_eletrico_100_I.12.4_100003_03.txt  Campo_eletrico_100_I.12.4_100004_04.txt  Campo_eletrico_100_I.12.4_100005_05.txt  Campo_eletrico_gerado_por_dipolo_100_II.6.15a_100001_01.txt  Campo_eletrico_gerado_por_dipolo_100_II.6.15a_100002_02.txt  Campo_eletrico_gerado_por_dipolo_100_II.6.15a_100003_03.txt  Campo_eletrico_gerado_por_dipolo_100_II.6.15a_100004_04.txt  Campo_eletrico_gerado_por_dipolo_100_II.6.15a_100005_05.txt  Campo_magnetico_em_torno_de_um_fio_100_II.13.17_100001_01.txt  Campo_magnetico_em_torno_de_um_fio_100_II.13.17_100002_02.txt  Campo_magnetico_em_torno_de_um_fio_100_II.13.17_100003_03.txt  Campo_magnetico_em_torno_de_um_fio_100_II.13.17_100004_04.txt  Campo_magnetico_em_torno_de_um_fio_100_II.13.17_100005_05.txt  Densidade_de_energia_eletrica_100_II.8.31_100001_01.txt  Densidade_de_energia_eletrica_100_II.8.31_100002_02.txt  Densidade_de_energia_eletrica_100_II.8.31_100003_03.txt  Densidade_de_energia_eletrica_100_II.8.31_100004_04.txt  Densidade_de_energia_eletrica_100_II.8.31_100005_05.txt  Densidade_de_probabilidade_100_I.6.20a_100001_01.txt  Densidade_de_probabilidade_100_I.6.20a_100002_02.txt  Densidade_de_probabilidade_100_I.6.20a_100003_03.txt  Densidade_de_probabilidade_100_I.6.20a_100004_04.txt  Densidade_de_probabilidade_100_I.6.20a_100005_05.txt  Distancia_Euclidiana_100_I.8.14_100001_01.txt  Distancia_Euclidiana_100_I.8.14_100002_02.txt  Distancia_Euclidiana_100_I.8.14_100003_03.txt  Distancia_Euclidiana_100_I.8.14_100004_04.txt  Distancia_Euclidiana_100_I.8.14_100005_05.txt  Energia_cinetica_total_100_I.13.4_100001_01.txt  Energia_cinetica_total_100_I.13.4_100002_02.txt  Energia_cinetica_total_100_I.13.4_100003_03.txt  Energia_cinetica_total_100_I.13.4_100004_04.txt  Energia_cinetica_total_100_I.13.4_100005_05.txt  (+85 more)
GECCO-02/: Bose-einstein_100_III.4.32_100001_01.txt  Bose-einstein_100_III.4.32_100002_02.txt  Bose-einstein_100_III.4.32_100003_03.txt  Bose-einstein_100_III.4.32_100004_04.txt  Bose-einstein_100_III.4.32_100005_05.txt  Campo_eletrico_100_I.12.4_100001_01.txt  Campo_eletrico_100_I.12.4_100002_02.txt  Campo_eletrico_100_I.12.4_100003_03.txt  Campo_eletrico_100_I.12.4_100004_04.txt  Campo_eletrico_100_I.12.4_100005_05.txt  Campo_eletrico_gerado_por_dipolo_100_II.6.15a_100001_01.txt  Campo_eletrico_gerado_por_dipolo_100_II.6.15a_100002_02.txt  Campo_eletrico_gerado_por_dipolo_100_II.6.15a_100003_03.txt  Campo_eletrico_gerado_por_dipolo_100_II.6.15a_100004_04.txt  Campo_eletrico_gerado_por_dipolo_100_II.6.15a_100005_05.txt  Campo_magnetico_em_torno_de_um_fio_100_II.13.17_100001_01.txt  Campo_magnetico_em_torno_de_um_fio_100_II.13.17_100002_02.txt  Campo_magnetico_em_torno_de_um_fio_100_II.13.17_100003_03.txt  Campo_magnetico_em_torno_de_um_fio_100_II.13.17_100004_04.txt  Campo_magnetico_em_torno_de_um_fio_100_II.13.17_100005_05.txt  Densidade_de_energia_eletrica_100_II.8.31_100001_01.txt  Densidade_de_energia_eletrica_100_II.8.31_100002_02.txt  Densidade_de_energia_eletrica_100_II.8.31_100003_03.txt  Densidade_de_energia_eletrica_100_II.8.31_100004_04.txt  Densidade_de_energia_eletrica_100_II.8.31_100005_05.txt  Densidade_de_probabilidade_100_I.6.20a_100001_01.txt  Densidade_de_probabilidade_100_I.6.20a_100002_02.txt  Densidade_de_probabilidade_100_I.6.20a_100003_03.txt  Densidade_de_probabilidade_100_I.6.20a_100004_04.txt  (+96 more)
decent/: descent.in
(+2632 files in other folders)
