load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

sh_binary(
    name = "vcpkg-install",
    srcs = ["vcpkg-install.sh"],
)

cc_binary(
    name = "app_demo",
    srcs = glob([
        "src/main.cpp", 
    ]),
    deps = ["//include:brkgp-lib", "@Scanner//:Scanner", "@gmp//:gmp", "@cln//:cln", "@ginac//:ginac"],
    linkstatic=1
)

load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

# bazel run :refresh_compile_commands
refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
      # FOR WINDOWS /MT:
      # ???
      # FOR LINUX:
      "//:app_demo": "--cxxopt=-std=c++20 --define=MY_LONG_SIZE=64 --define=GMP_TYPE_L=\"#define GMP_DEMANDS_UINTD_LONG\" --define=GMP_TYPE_LL=\"/* #undef GMP_DEMANDS_UINTD_LONG_LONG */\" --define=TIME_UNIX_WIN=\"#define HAVE_GETTIMEOFDAY\" ",
    },
)
